...
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/main_user_setting_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_addTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="32dp"
        android:text="Add Task"
...
