//package com.example.mastertask;
//
//
//import static androidx.test.espresso.Espresso.onView;
//import static androidx.test.espresso.Espresso.pressBack;
//import static androidx.test.espresso.action.ViewActions.click;
//import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
//import static androidx.test.espresso.action.ViewActions.replaceText;
//import static androidx.test.espresso.assertion.ViewAssertions.matches;
//import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
//import static androidx.test.espresso.matcher.ViewMatchers.withId;
//import static androidx.test.espresso.matcher.ViewMatchers.withParent;
//import static androidx.test.espresso.matcher.ViewMatchers.withText;
//import static org.hamcrest.Matchers.allOf;
//
//import android.view.View;
//import android.view.ViewGroup;
//import android.view.ViewParent;
//
//import androidx.test.espresso.ViewInteraction;
//import androidx.test.ext.junit.rules.ActivityScenarioRule;
//import androidx.test.ext.junit.runners.AndroidJUnit4;
//import androidx.test.filters.LargeTest;
//
//import org.hamcrest.Description;
//import org.hamcrest.Matcher;
//import org.hamcrest.TypeSafeMatcher;
//import org.hamcrest.core.IsInstanceOf;
//import org.junit.Rule;
//import org.junit.Test;
//import org.junit.runner.RunWith;
//
//@LargeTest
//@RunWith(AndroidJUnit4.class)
//public class AddingaTask {
//
////    @Rule
////    public ActivityScenarioRule<MainActivity> mActivityScenarioRule =
////            new ActivityScenarioRule<>(MainActivity.class);
////
////    @Test
////    public void addingaTask() {
////        ViewInteraction materialButton = onView(
////                allOf(withId(R.id.button_addTask), withText("Add Task"),
////                        childAtPosition(
////                                childAtPosition(
////                                        withId(android.R.id.content),
////                                        0),
////                                1),
////                        isDisplayed()));
////        materialButton.perform(click());
////
////        ViewInteraction textInputEditText = onView(
////                allOf(withId(R.id.add_task_input),
////                        childAtPosition(
////                                childAtPosition(
////                                        withId(R.id.textInputLayout),
////                                        0),
////                                0),
////                        isDisplayed()));
////        textInputEditText.perform(replaceText("test"), closeSoftKeyboard());
////
////        ViewInteraction textInputEditText2 = onView(
////                allOf(withId(R.id.task_add_description_input),
////                        childAtPosition(
////                                childAtPosition(
////                                        withId(R.id.textInputLayout2),
////                                        0),
////                                0),
////                        isDisplayed()));
////        textInputEditText2.perform(replaceText("hello"), closeSoftKeyboard());
////
////        ViewInteraction materialButton2 = onView(
////                allOf(withId(R.id.task_add_butt_input), withText("Add Task"),
////                        childAtPosition(
////                                childAtPosition(
////                                        withId(android.R.id.content),
////                                        0),
////                                3),
////                        isDisplayed()));
////        materialButton2.perform(click());
////
////        pressBack();
////
////        ViewInteraction viewGroup = onView(
////                allOf(withParent(withParent(IsInstanceOf.<View>instanceOf(android.view.ViewGroup.class))),
////                        isDisplayed()));
////        viewGroup.check(matches(isDisplayed()));
////    }
////
////    private static Matcher<View> childAtPosition(
////            final Matcher<View> parentMatcher, final int position) {
////
////        return new TypeSafeMatcher<View>() {
////            @Override
////            public void describeTo(Description description) {
////                description.appendText("Child at position " + position + " in parent ");
////                parentMatcher.describeTo(description);
////            }
////
////            @Override
////            public boolean matchesSafely(View view) {
////                ViewParent parent = view.getParent();
////                return parent instanceof ViewGroup && parentMatcher.matches(parent)
////                        && view.equals(((ViewGroup) parent).getChildAt(position));
////            }
////        };
////    }
//}
